# esp32-example

./: CMakeLists.txt  idf-env.bat  partitions.csv
components/ota_plugin/: CMakeLists.txt  README.md  ota_config.h  ota_http_client.c  ota_http_client.h  ota_log.c  ota_log.h  ota_plugin.c  ota_plugin.h  ota_status.c  ota_status.h  ota_trace.c  ota_trace.h
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_main.c  test_main.h
